# typeforge

./: .gitignore  AGENTS.md  DESIGN.md  PROJECT_GOAL.md  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/prototype/: consumer.py  pyproject.toml
examples/prototype/src/: api.py
pydantic/: TECHNICAL_DESIGN.md
src/typeforge/: __init__.py  __main__.py  _documentation.py  _markers.py  cli.py  documentation.py
src/typeforge/adapters/: __init__.py  lsp.py  lsp_model.py  mypy.py  pyrefly.py
src/typeforge/analysis/: __init__.py  mapping.py  model.py  positions.py  service.py
src/typeforge/compiler/: __init__.py  _markers.py  _pipeline_adaptation.py  _pipeline_core.py  _pipeline_models.py  _pipeline_records.py  _pipeline_utils.py  _type_tree.py  config.py  emitter.py  evaluator.py  frontend.py  lowering.py  model.py  pipeline.py  records.py
src/typeforge/diagnostics/: __init__.py  explain.py  filter.py  model.py  provenance.py  pyrefly.py  render.py
src/typeforge/overlay/: __init__.py  transform.py
src/typeforge/proxy/: __init__.py  framing.py  hover.py  mapping.py  model.py  (+3 more)
tests/: test_cli.py
tests/adapters/: test_lsp.py  test_mypy.py  test_pyrefly.py
tests/analysis/: test_positions.py
tests/checker/: test_fallbacks.py
tests/compiler/: test_config.py  test_consumers.py  test_evaluator.py  test_frontend.py  test_lowering.py  test_marker_normalization.py  test_pipeline.py  test_pipeline_syntax.py  test_type_tree.py
tests/diagnostics/: test_diagnostic_presentation.py  test_return_verification.py
tests/documentation/: test_provider.py
tests/frontends/: test_griffe.py  test_libcst.py  test_stubpy.py
tests/overlay/: test_transform.py
tests/proxy/: test_framing.py  test_hover.py  test_server.py
tests/pydantic/: test_errors.py  test_input.py  test_json_schema.py  test_map_fields.py  test_schema.py  test_structural_map.py
tests/runtime/: test_imports.py  test_markers.py  test_result.py
tests/utils/: test_stream.py
tests/verification/: test_implementation_verification.py
typings/stubpy/: __init__.pyi
(+19 files in other folders)
