[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "typeforge"
version = "0.1.0"
description = "Compile richer Python type relationships into portable stubs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "returns>=0.28.0",
]

[project.scripts]
typeforge = "typeforge.cli:main"

[project.optional-dependencies]
mypy = [
    "mypy>=2.2,<3",
]
pyrefly = [
    "pyrefly>=1.1,<2",
]
compiler = [
    "griffe>=2.1,<3",
    "libcst>=1.8,<2",
    "stubpy>=0.4,<0.5",
]

[dependency-groups]
dev = [
    "mypy>=2.2,<3",
    "pyrefly>=1.1.1",
    "pyright>=1.1.400,<2",
    "pytest>=9,<10",
    "ruff>=0.15,<0.16",
]

[tool.hatch.build.targets.wheel]
packages = ["src/typeforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.14"
plugins = ["returns.contrib.mypy.returns_plugin"]
exclude = ["tests/.*/fixtures/"]
mypy_path = [
    "typings",
    "examples/prototype/.typeforge/stubs",
    "examples/prototype/src",
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
exclude = ["tests/**/fixtures"]
venvPath = "."
venv = ".venv"
extraPaths = [
    "src",
    "typings",
    "examples/prototype/.typeforge/stubs",
    "examples/prototype/src",
]

[tool.pyrefly]
python-version = "3.14"
search-path = ["src", "typings"]
project-includes = ["src/**"]
project-excludes = [".venv/**", ".typeforge/**", "dist/**"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
